Some correction in french

--- a/PokemonGo-UWP/Strings/fr-FR/Items.resw
+++ b/PokemonGo-UWP/Strings/fr-FR/Items.resw
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -127,25 +127,25 @@
     <value>Hyper Potion</value>
   </data>
   <data name="ItemIncenseCool" xml:space="preserve">
-    <value>Incense Cool</value>
+    <value>Encens Cool</value>
   </data>
   <data name="ItemIncenseFloral" xml:space="preserve">
-    <value>Incense Floral</value>
+    <value>Encens Floral</value>
   </data>
   <data name="ItemIncenseOrdinary" xml:space="preserve">
-    <value>Incense Ordinary</value>
+    <value>Encens Ordinaire</value>
   </data>
   <data name="ItemIncenseSpicy" xml:space="preserve">
-    <value>Incense Spicy</value>
+    <value>Incense Epicé</value>
   </data>
   <data name="ItemIncubatorBasic" xml:space="preserve">
-    <value>Incubator Basic</value>
+    <value>Incubateur Basique</value>
   </data>
   <data name="ItemIncubatorBasicUnlimited" xml:space="preserve">
-    <value>Incubator Basic Unlimited</value>
+    <value>Incubateur Basique Illimité</value>
   </data>
   <data name="ItemItemStorageUpgrade" xml:space="preserve">
-    <value>Item Storage Upgrade</value>
+    <value>Extension de sac</value>
   </data>
   <data name="ItemLuckyEgg" xml:space="preserve">
     <value>Œuf Chance</value>
@@ -169,7 +169,7 @@
     <value>Poke Ball</value>
   </data>
   <data name="ItemPokemonStorageUpgrade" xml:space="preserve">
-    <value>Pokemon Storage Upgrade</value>
+    <value>Extension d'emplacements Pokemon</value>
   </data>
   <data name="ItemPotion" xml:space="preserve">
     <value>Potion</value>
@@ -181,22 +181,22 @@
     <value>Rappel</value>
   </data>
   <data name="ItemSpecialCamera" xml:space="preserve">
-    <value>Special Camera</value>
+    <value>Appareil photo</value>
   </data>
   <data name="ItemSuperPotion" xml:space="preserve">
     <value>Super Potion</value>
   </data>
   <data name="ItemTroyDisk" xml:space="preserve">
-    <value>Troy Disk</value>
+    <value>Module leurre</value>
   </data>
   <data name="ItemUltraBall" xml:space="preserve">
     <value>Hyper Ball</value>
   </data>
   <data name="ItemUnknown" xml:space="preserve">
-    <value>Unknown</value>
+    <value>Inconnu</value>
   </data>
   <data name="ItemWeparBerry" xml:space="preserve">
-    <value>Wepar Berry</value>
+    <value>Baie Repoi</value>
   </data>
   <data name="ItemXAttack" xml:space="preserve">
     <value>Attaque +</value>
