Translate Cool Incense by Encens Rafraîchissant
Thanks @Trankheal :)

--- a/PokemonGo-UWP/Strings/fr-FR/Items.resw
+++ b/PokemonGo-UWP/Strings/fr-FR/Items.resw
@@ -127,7 +127,7 @@
     <value>Hyper Potion</value>
   </data>
   <data name="ItemIncenseCool" xml:space="preserve">
-    <value>Encens Cool</value>
+    <value>Encens Rafraîchissant</value>
   </data>
   <data name="ItemIncenseFloral" xml:space="preserve">
     <value>Encens Floral</value>
